Fix overflow. Test login restriction

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /* Base */
 body {
+  overflow-x:hidden;
   line-height: 1.7;
   color: gray;
   font-weight: 300;
